--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ cachetools==5.5.2
 certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.1.8
-decorator==5.2.1
+decorator==4.4.2
 dotenv==0.9.9
+elevenlabs==2.5.0
 filelock==3.18.0
 fsspec==2025.5.1
 google-auth==2.40.3
 google-genai==1.21.1
+gradio_client==1.10.3
 gTTS==2.5.4
 h11==0.16.0
 hf-xet==1.1.5
@@ -19,10 +21,10 @@ huggingface-hub==0.33.0
 idna==3.10
 imageio==2.37.0
 imageio-ffmpeg==0.6.0
-moviepy==2.2.1
+moviepy==1.0.3
 numpy==2.3.1
 packaging==25.0
-pillow==11.2.1
+Pillow==9.5.0
 proglog==0.1.12
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
