--- a/.github/workflows/generate-story.yml
+++ b/.github/workflows/generate-story.yml
@@ -17,13 +17,14 @@ jobs:
     steps:
     - name: 📥 Checkout del repositorio
       uses: actions/checkout@v3
-
+   
     - name: 🐍 Instalar dependencias
       run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg imagemagick libjpeg-dev zlib1g-dev libpng-dev libfreetype6-dev liblcms2-dev libopenjp2-7-dev libtiff-dev libwebp-dev tcl8.6-dev tk8.6-dev python3-tk
         python -m pip install --upgrade pip
         PIP_PREFER_BINARY=1 python -m pip install --no-cache-dir -r requirements.txt
-        sudo apt-get update
-        sudo apt-get install ffmpeg imagemagick
+
       env:
         PYTHON_VERSION: "3.12.0"
 
