added ideas file to job name

--- a/.github/workflows/generate-story.yml
+++ b/.github/workflows/generate-story.yml
@@ -18,6 +18,7 @@ on:
 
 jobs:
   generar-reel:
+    name: 📽️ Generar Reel - ${{ inputs.ideas_file }}
     runs-on: ubuntu-latest
     defaults:
       run:
