--- a/.github/workflows/generate-story.yml
+++ b/.github/workflows/generate-story.yml
@@ -49,7 +49,7 @@ jobs:
         HF_TOKEN: ${{ secrets.HF_TOKEN }}
         DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
         ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_API_KEY }}
-        GEMINI_API_KEY: ${{ secreta.GEMINI_API_KEY }}
+        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
       run: |
         echo "HF_TOKEN=${HF_TOKEN}" >> .env
         echo "DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}" >> .env
